--- a/about.html
+++ b/about.html
@@ -1,1 +1,32 @@
-HTML
+<!doctype html>
+
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+
+  <title>Chef Portfolio</title>
+
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/index.css">
+
+</head>
+<header id="home">
+  <nav>
+    <div class="links">
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#products">Proucts</a>
+      <a href="#blog">Blog</a>
+      <a href="#contact">Contact</a>
+    </div>
+  </nav>
+</header>
+<div class="backgound-img">
+  <img class="background-img" src="" alt="CHEF">
+</div>
+
+<body>
+</body>
+
+</html>
